# context-course

./: .gitignore  README.md  _versions.yml
.github/workflows/: build_documentation.yml  build_pr_documentation.yml  upload_pr_documentation.yml
course-hyperframes/agent-loop/: index.html  meta.json  package.json
course-hyperframes/hook-lifecycle/: index.html  meta.json  package.json
course-hyperframes/mcp-handshake/: index.html  meta.json  package.json
course-hyperframes/mcp-transports/: .gitignore  index.html  meta.json  package.json
course-hyperframes/plugin-bundle/: index.html  meta.json  package.json
course-hyperframes/skill-anatomy/: index.html  meta.json  package.json
projects/: AGENTS.md  README.md
projects/post-training/: .gitignore  AGENTS.md  README.md  evaluate.py  model.py  prepare.py  program.md  pyproject.toml  train.py
projects/post-training/.pi/: APPEND_SYSTEM.md
projects/post-training/.pi/agents/: experiment-worker.md  memory-keeper.md  planner.md  reporter.md  researcher.md  reviewer.md
projects/post-training/.pi/prompts/: posttrain.md
projects/post-training/docs/: pi-subagents-guide.md
projects/post-training/research/: notes.md  results.tsv
projects/post-training/scripts/: create_task.py  hf_job.py  print_pi_kickoff.py
projects/post-training/src/eval/general/: get_prompt.py  prompt.txt
projects/post-training/src/eval/tasks/nanochat/: benchmark.txt  evaluate.py
projects/post-training/src/eval/tasks/nanochat/task_context/: README.md
quiz/: push_questions.py  pyproject.toml
tests/: test_unit_snippets.py
(+189 files in other folders)
