[project]
name = "autoresearch-post-training"
version = "0.1.0"
description = "Single-model nano chat post-training benchmark"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "torch>=2.2",
]

[tool.uv.sources]
torch = [
    { index = "pytorch-cu128", marker = "sys_platform == 'linux'" },
]

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true
